// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BirthdaySavingsList component should render BirthdayCard component if addChildBirthday is added 1`] = `
<View>
  <Styled(View)>
    <Styled(View)>
      <BirthdayCard
        childId="3434"
        removeBirthday={[Function]}
        view="read"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={Object {}}
        showAddModal={[Function]}
        view="read"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={Object {}}
        showAddModal={[Function]}
        view="read"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={Object {}}
        showAddModal={[Function]}
        view="read"
      />
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`BirthdaySavingsList component should renders correctly when childrenBirthdays are not present 1`] = `
<View>
  <InfoMessage
    labels={
      Object {
        "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
        "lbl_profile_birthday_savings": "Birthday Savings",
        "lbl_profile_personal_info_back": "back",
      }
    }
    spacingStyles="margin-bottom-XXL margin-top-XXL"
  />
  <Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`BirthdaySavingsList component should renders correctly when childrenBirthdays are not present with read view 1`] = `
<InfoMessage
  labels={
    Object {
      "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
      "lbl_profile_birthday_savings": "Birthday Savings",
      "lbl_profile_personal_info_back": "back",
    }
  }
  spacingStyles="margin-bottom-XXL"
/>
`;

exports[`BirthdaySavingsList component should renders correctly when childrenBirthdays are present 1`] = `
<View>
  <InfoMessage
    labels={
      Object {
        "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
        "lbl_profile_birthday_savings": "Birthday Savings",
        "lbl_profile_personal_info_back": "back",
      }
    }
    spacingStyles="margin-bottom-XXL margin-top-XXL"
  />
  <Styled(View)>
    <Styled(View)>
      <BirthdayCard
        childId="12345"
        removeBirthday={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
    <Styled(View)>
      <EmptyBirthdayCard
        labels={
          Object {
            "lbl_profile_birthday_saving_info": "Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!",
            "lbl_profile_birthday_savings": "Birthday Savings",
            "lbl_profile_personal_info_back": "back",
          }
        }
        showAddModal={[Function]}
        view="edit"
      />
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`InfoMessage component should render correctly 1`] = `
<Styled(Styled(BodyCopy))
  accessibilityText=""
  dataLocator=""
  fontSize="fs14"
  margin={null}
  mobileFontFamily="secondary"
  numberOfLines={null}
  spacingStyles=""
  text="Add up to 4 kids’ birthdays to your account and receive special savings during their birthday month!"
  textDecoration={null}
/>
`;
